--- a/GenLauncherConfig.yml
+++ b/GenLauncherConfig.yml
@@ -1,7 +1,7 @@
 ModificationType: Mod
 Name: C&C Power Play
-Version: 1.1
-SimpleDownloadLink: https://onedrive.live.com/embed?cid=1E884F024F359EC2&resid=1E884F024F359EC2%212234&authkey=AO1iRVgABXSnjWI
+Version: 1.101
+SimpleDownloadLink: https://onedrive.live.com/embed?cid=1E884F024F359EC2&resid=1E884F024F359EC2%212235&authkey=ACu2IT73ZAlUJd4
 UIImageSourceLink: https://i.imgur.com/T1eOEiF.png
 ModDBLink: https://www.moddb.com/mods/cc-power-play
 NewsLink: https://www.moddb.com/mods/cc-power-play/articles
