--- a/GenLauncherConfig.yml
+++ b/GenLauncherConfig.yml
@@ -1,6 +1,6 @@
 ModificationType: Mod
 Name: C&C Power Play
-Version: 1.5.2 Fixed
+Version: 1.5.3
 SimpleDownloadLink: https://onedrive.live.com/embed?cid=1E884F024F359EC2&resid=1E884F024F359EC2%212235&authkey=ACu2IT73ZAlUJd4
 UIImageSourceLink: https://i.imgur.com/amxF9Q6.png
 ModDBLink: https://www.moddb.com/mods/cc-power-play
